--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "A minimal Electron application",
   "main": "main.js",
   "scripts": {
-    "start": "nodemon --watch main.js --exec 'electron .'",
-    "dist": "build"
+    "start": "nodemon --watch main.js --exec 'electron .'"
   },
   "build": {
     "appId": "Musicplay",
